ants/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-sourcepath
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants
-source
11
-classpath
C:\Program Files\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext.jar;C:\Program Files\Greenfoot\lib\junit-4.11.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.2.6.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.4.jar;C:\Program Files\Greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants
-d
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
ants
-windowtitle
ants
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants/AntWorld.java
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants/Counter.java
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants/Creature.java
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants/Pheremone.java
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants/Ant.java
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants/AntHill.java
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants/Food.java
<---- end of javadoc command ---->
Loading source file C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\AntWorld.java...
Loading source file C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\Counter.java...
Loading source file C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\Creature.java...
Loading source file C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\Pheremone.java...
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\Pheremone.java:29: error: -> expected
        else()
              ^
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\Pheremone.java:29: error: not a statement
        else()
            ^
C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\Pheremone.java:32: error: ';' expected
        }
         ^
Loading source file C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\Ant.java...
Loading source file C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\AntHill.java...
Loading source file C:\Users\tyler\OneDrive\Documents\GitHub\emergent-behavior1-TylerSimas\ants\Food.java...
3 errors
